# aventuretextuelleenc

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile.sh  conversion.c  conversion.h  extended_game_function.c  extended_game_function.h  fonctionutile.c  fonctionutile.h  game_function.c  game_function.h  illustrator.c  illustrator.h  main.c  tutoriel_fonction.c  tutoriel_fonction.h
